@@ -433,7 +433,7 @@ class Plugin(plugin.PluginBase):
             if dhcp:
                 parameters.append('bootproto=dhcp')
             elif address is not None:
-                parameters.append('ipaddr=%s', address)
+                parameters.append('ipaddr=%s' % address)
                 netmask = socket.inet_ntoa(
                     struct.pack(
                         "!I",
@@ -446,8 +446,8 @@ class Plugin(plugin.PluginBase):
                         )
                     )
                 )
-                parameters.append('netmask=%s', netmask)
-                parameters.append('gateway=%s', gateway)
+                parameters.append('netmask=%s' % netmask)
+                parameters.append('gateway=%s' % gateway)
             else:
                 raise RuntimeError(
                     _('Unsupported network manager configuration')
