@@ -3,6 +3,8 @@ ovirt-host-deploy -- oVirt host deploy
 ????-??-?? - Version 1.1.0
 
  * vdsm: bridge: fix vlan id detection, thanks to Jeff Bailey for reporting.
+ * vdsm: bridge: fix format typo when querying network manager, thanks to
+   Pascal Jakobi for reporting.
  * vdsm: hardware: do not fail if cannot read msr, rhbz#916589.
  * vdsm: vdsmid: do not attempt to install dmidecode on platforms other than
    x86.
